--- a/package.json
+++ b/package.json
@@ -1,28 +1,32 @@
 {
-  "name": "fileup",
-  "version": "0.0.0",
+  "name": "fileup.dev",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "dev": "vite --port 3198",
-    "build": "vite build",
+    "dev": "vite",
+    "build": "vue-tsc -b && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@element-plus/icons-vue": "^2.1.0",
-    "axios": "^1.4.0",
-    "bootstrap": "^5.3.1",
-    "cheerio": "^1.0.0-rc.12",
-    "element-plus": "^2.3.9",
-    "fullpage.js": "^4.0.20",
-    "identify": "^0.1.5",
-    "vue": "^3.3.4",
-    "vue-fullpage.js": "^0.2.15",
-    "vue-router": "^4.2.4",
-    "vue-toastification": "^2.0.0-rc.5"
+    "@vueuse/core": "^14.2.0",
+    "axios": "^1.13.4",
+    "naive-ui": "^2.43.2",
+    "pinia": "^3.0.4",
+    "vue": "^3.5.27",
+    "vue-i18n": "^11.2.8",
+    "vue-router": "4"
   },
   "devDependencies": {
-    "@types/bootstrap": "^5.2.6",
-    "@vitejs/plugin-vue": "^4.2.3",
-    "vite": "^4.4.6"
+    "@iconify-json/fa-brands": "^1.2.2",
+    "@iconify-json/fa-solid": "^1.2.2",
+    "@iconify-json/ph": "^1.2.2",
+    "@types/node": "^24.10.9",
+    "@vitejs/plugin-vue": "^6.0.3",
+    "@vue/tsconfig": "^0.8.1",
+    "typescript": "~5.9.3",
+    "unocss": "^66.6.0",
+    "vite": "^7.3.1",
+    "vue-tsc": "^3.2.4"
   }
 }
