--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -3,6 +3,14 @@
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "types": ["vite/client"],
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"],
+      "@homepage/*": ["src/homepage/*"],
+      "@frontend/*": ["src/frontend/*"],
+      "@backstage/*": ["src/backstage/*"],
+      "@common/*": ["src/common/*"]
+    },
 
     /* Linting */
     "strict": true,
