--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mcp-b/global": "^1.5.0",
     "@vueuse/core": "^14.2.0",
     "axios": "^1.13.4",
     "naive-ui": "^2.43.2",
